# ss_prep_260413

comm_benchmark/: CMakeLists.txt  README.md  package.xml
comm_benchmark/include/comm_benchmark/: cli.hpp  payload.hpp  stats.hpp  transport.hpp
comm_benchmark/include/comm_benchmark/transports/: raw_udp.hpp  ros2_be.hpp  ros2_mte.hpp
comm_benchmark/msg/: Payload.msg
comm_benchmark/scripts/: analyze.py
comm_benchmark/src/: bench_a_main.cpp  bench_b_main.cpp  bench_run.cpp  cli.cpp  stats.cpp
comm_benchmark/src/transports/: raw_udp.cpp  ros2_be.cpp  ros2_mte.cpp
ur10e_teleop_control_ff_cpp/: CMakeLists.txt  README.md  package.xml
ur10e_teleop_control_ff_cpp/config/: real_ur.yaml
ur10e_teleop_control_ff_cpp/include/ur10e_teleop_control_ff_cpp/: config.hpp  dashboard_client.hpp  follower_node.hpp  leader_node.hpp  rt_thread.hpp  ur_jacobian.hpp
ur10e_teleop_control_ff_cpp/launch/: teleop_real.launch.py  teleop_real_follower.launch.py  teleop_real_leader.launch.py
ur10e_teleop_control_ff_cpp/script/: install.sh  rt_comparison.py  setcap_rt.sh
ur10e_teleop_control_ff_cpp/src/: config.cpp  dashboard_client.cpp  follower_main.cpp  follower_node.cpp  jitter_benchmark.cpp  leader_main.cpp  leader_node.cpp  rt_thread.cpp  ur_jacobian.cpp
ur10e_teleop_control_hybrid_cpp/: CMakeLists.txt  README.md  package.xml
ur10e_teleop_control_hybrid_cpp/config/: real_ur.yaml
ur10e_teleop_control_hybrid_cpp/include/ur10e_teleop_control_hybrid_cpp/: config.hpp  dashboard_client.hpp  disturbance_observer.hpp  dynamics_model.hpp  energy_tank.hpp  follower_node.hpp  four_channel_controller.hpp  leader_node.hpp  rt_thread.hpp  ur_jacobian.hpp  velocity_estimator.hpp
ur10e_teleop_control_hybrid_cpp/launch/: teleop_real.launch.py  teleop_real_follower.launch.py  teleop_real_leader.launch.py
ur10e_teleop_control_hybrid_cpp/resources/: ur10e.urdf  ur3e.urdf
ur10e_teleop_control_hybrid_cpp/script/: install.sh  rt_comparison.py  setcap_rt.sh
ur10e_teleop_control_hybrid_cpp/src/: config.cpp  dashboard_client.cpp  disturbance_observer.cpp  dynamics_model.cpp  dynamics_selftest.cpp  energy_tank.cpp  follower_main.cpp  follower_node.cpp  four_channel_controller.cpp  jitter_benchmark.cpp  leader_main.cpp  leader_node.cpp  rt_thread.cpp  ur_jacobian.cpp  velocity_estimator.cpp
ur10e_teleop_control_unilateral_cpp/: CMakeLists.txt  README.md  package.xml
ur10e_teleop_control_unilateral_cpp/config/: real_ur.yaml
ur10e_teleop_control_unilateral_cpp/include/ur10e_teleop_control_unilateral_cpp/: config.hpp  dashboard_client.hpp  follower_node.hpp  leader_node.hpp  rt_thread.hpp  ur_jacobian.hpp
ur10e_teleop_control_unilateral_cpp/launch/: teleop_real.launch.py  teleop_real_follower.launch.py  teleop_real_leader.launch.py
ur10e_teleop_control_unilateral_cpp/script/: install.sh  rt_comparison.py  setcap_rt.sh
ur10e_teleop_control_unilateral_cpp/src/: config.cpp  dashboard_client.cpp  follower_main.cpp  follower_node.cpp  jitter_benchmark.cpp  leader_main.cpp  leader_node.cpp  rt_thread.cpp  ur_jacobian.cpp
ur10e_teleop_mujoco/: CMakeLists.txt  README.md  package.xml
ur10e_teleop_mujoco/launch/: teleop_sim.launch.py
ur10e_teleop_mujoco/script/: exec_bilateral_sim.sh  sim_install.sh
ur10e_teleop_mujoco/src/: follower_sim.py  follower_sim_node.py  leader_sim.py  leader_sim_node.py  shm_manager.py
ur10e_teleop_mujoco/tests/: test_full_stack.py  test_full_stack_ros2.py
ur10e_teleop_mujoco/xml/: ur10e.xml  ur10e_follower_scene.xml  ur3e.xml
ur10e_teleop_real/: CMakeLists.txt  README.md
ur10e_teleop_real/config/: real_ur.yaml  rtde_dummy.yaml
ur10e_teleop_real/launch/: teleop_dummy.launch.py  teleop_real.launch.py  teleop_real_leader.launch.py
ur10e_teleop_real/script/: calibrate_bilateral.py  capture_pose_pairs.py  install.sh  launch_bilateral_real.sh  launch_unilateral_real.sh  logging.sh  test_rtde_connection.py  test_rtde_minimal.py
ur10e_teleop_real/src/: control.py  dummy_control.py  environment_sensing_data_emulator.py  follower_real_node.py  leader_real_node.py  rtde_connection.py
ur10e_teleop_real/tests/: test_full_stack_real.py  test_full_stack_real_hw.py
ur10e_teleop_real_cpp/: CMakeLists.txt  README.md  package.xml
ur10e_teleop_real_cpp/config/: real_ur.yaml
ur10e_teleop_real_cpp/include/ur10e_teleop_real_cpp/: config.hpp  dashboard_client.hpp  follower_node.hpp  leader_node.hpp  rt_thread.hpp  ur_jacobian.hpp
ur10e_teleop_real_cpp/launch/: teleop_real.launch.py  teleop_real_follower.launch.py  teleop_real_leader.launch.py
ur10e_teleop_real_cpp/script/: install.sh  rt_comparison.py  setcap_rt.sh
ur10e_teleop_real_cpp/src/: config.cpp  dashboard_client.cpp  follower_main.cpp  follower_node.cpp  jitter_benchmark.cpp  leader_main.cpp  leader_node.cpp  rt_thread.cpp  ur_jacobian.cpp
ur10e_teleop_real_py/: CMakeLists.txt  README.md  package.xml
ur10e_teleop_real_py/config/: dummy.yaml  real_ur.yaml  ur10e_control_params.yaml
ur10e_teleop_real_py/launch/: teleop_dummy.launch.py  teleop_real.launch.py  teleop_real_follower.launch.py  teleop_real_leader.launch.py  teleop_rtde_dummy.launch.py
ur10e_teleop_real_py/script/: calibrate_bilateral.py  identify_robots.py  install.sh  launch_bilateral_real.sh  launch_unilateral_real.sh  log_monitor.py  test_rtde_connection.py  test_rtde_minimal.py
ur10e_teleop_real_py/src/: control.py  dashboard_client.py  follower_real_node.py  leader_real_node.py  ur_jacobian.py  ur_server_dummy.py
ur10e_teleop_real_py/tests/: test_full_stack_real.py  test_full_stack_real_hw.py  test_full_stack_real_ur_server_dummy.py
