<?xml version="1.0"?>
<package format="3">
  <name>comm_benchmark</name>
  <version>0.1.0</version>
  <description>
    Inter-PC communication bake-off harness for the bilateral teleop
    project. Mocks the leader↔follower message pattern (1 KiB payload
    at 500 Hz) and exposes pluggable transports (ROS2 BEST_EFFORT,
    ROS2 multi-threaded executor, raw UDP) for jitter / throughput
    measurement under (optionally tc-netem-emulated) WAN conditions.
  </description>
  <maintainer email="bpearson@example.com">UR10E Migration Project</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export><build_type>ament_cmake</build_type></export>
</package>
