<?xml version="1.0"?>
<package format="3">
  <name>ur10e_teleop_real</name>
  <version>1.0.0</version>
  <description>UR10E bilateral teleoperation — real hardware with dummy client.</description>
  <maintainer email="your@email.com">UR10E Migration Project</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>python3-pynput</exec_depend>
  <exec_depend>python3-xlib</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export><build_type>ament_cmake</build_type></export>
</package>
